--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,6 +31,10 @@
     padding: 0;
     margin: 0;
 }
+body {
+    background-color: #000;
+    color: white;
+}
 a{
     text-decoration: none;
     color: white;
@@ -38,8 +42,11 @@ a{
 ul{
     list-style-type: none;
 }
-h1{
+h1,h2,h3,h4,h5,h6{
     font-family: var(--font-poppins);
+}
+p{
+    font-family: var(--font-roboto);
 }
 div{
     position: relative;
@@ -52,6 +59,18 @@ div{
 }
 .text-hover{
     color: var(--text-secondary);
+}
+.text-decor1{
+    color: var(--text-decor1);
+}
+.text-decor2{
+    color: var(--text-decor2);
+}
+.text-decor3{
+    color: var(--text-decor3);
+}
+.text-important{
+    color: var(--text-important);
 }
 .text-center{
     text-align: center;
@@ -246,6 +265,9 @@ div{
 .w-35{
     width: 40%;
 }
+.fit-content{
+    height: fit-content;
+}
 .icon{
     position: relative;
     color: white;
@@ -274,11 +296,6 @@ div{
 .linknav:hover{
     color: var(--text-secondary);
     font-weight: 700;
-}
-
-body {
-    background-color: #000;
-    color: white;
 }
 
 /* ------------ Global Clases ------------ */
@@ -470,7 +487,7 @@ body {
 .about{
     padding: 80px 5% 60px 5%;
     gap: 5vw;
-    height: 100vh;
+    height: 100%;
 }
 
 .photo-bg{
@@ -539,6 +556,73 @@ body {
 .interests > *{
     transform: scale(1);
     box-shadow: 0 0 #0000, 0 0 #0000, 0 1px 2px 0 rgba(0,0,0,.05);
+}
+
+/* ------------ Experiences / Education / Skills Section ------------ */
+
+#experiences{
+    padding: 80px 5% 60px 5%;
+}
+
+.exp-cont{
+    padding: 10px 0px;
+    gap: 50px;
+}
+.exp-cont section{
+    padding: 10px;
+    gap: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+}
+.exp-cont section ul{
+    width: 100%;
+}
+.exp-cont section .box-list > *{
+    margin-bottom: 40px;
+}
+.exp-cont section .box-list > :last-child{
+    margin-bottom: 0;
+}
+.exp-cont section .box-list li{
+    border: 1px solid #00ADB5;
+    border-radius: 5px;
+    width: 100%;
+    height: fit-content;
+    padding: 10px 45px;
+}
+.exp-cont section .box-list li > :first-child{
+    margin-bottom: 10px;
+}
+.exp-cont section .box-list li p{
+    font-weight: 300;
+    font-size: 20px;
+    font-family: var(--font-roboto);
+}
+.exp-cont section .box-list li h3{
+    font-weight: 500;
+    font-size: 24px;
+    font-family: var(--font-roboto);
+}
+.exp-cont section .skills{
+    border: 1px solid var(--text-secondary);
+    width: 100%;
+    height: 100%;
+    padding: 40px 40px;
+
+}
+.exp-cont section .skills hr{
+    width: 100%;
+    background-color: var(--text-important);
+    border: none;
+    height: 1px;
+}
+.exp-cont > hr{
+    width: 100%;
+    background-color: var(--text-secondary);
+    border: none;
+    height: 1px;
 }
 
 /* ------------ Footer ------------ */
