Fix of works section and added play button

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -337,14 +337,15 @@ div{
 
 .header{
     position: relative;
-    padding: 40px 0 60px 0;
-    vertical-align: middle;
+    padding: 40px 30px 60px 30px;
     align-items: center;
     width: 100%;
 }
-.header .logo{
-    margin: 0;
-    padding-left: 20px;
+.header:first-child{
+    margin-right: auto;
+}
+.header:last-child{
+    margin-left: auto;
 }
 
 .header #nav ul{
@@ -352,9 +353,7 @@ div{
 }
 
 .header .socials-header {
-    position: relative;
     gap: 1rem;
-    padding-right: 20px;
 }
 
 .header .logo a img{
@@ -518,7 +517,6 @@ div{
     gap: 5vw;
     height: 100%;
 }
-
 .photo-bg{
     border: .25px solid #00ADB5;
     background-color: rgba(0, 0, 0, .125);
@@ -527,7 +525,6 @@ div{
     height: fit-content;
 
 }
-
 .photo{
     padding: 5% 2.5% 5% 2.5%;
     border: 1px solid #00ADB5;
@@ -546,7 +543,6 @@ div{
 .photo .socials-about{
     gap: 10px;
 }
-
 .photo .socials-about li .icon:hover{
     fill: #e34061!important;    
 }
@@ -559,15 +555,31 @@ div{
 .photo-bg .music-box > :first-child{
     margin-bottom: 15px;
 }
-.photo-bg .music-box .music-list{
-    list-style: disc inside;
+.photo-bg .music-box .music-list li{
+    display: flex;
+    align-items: center;
+}
+.photo-bg .music-box .music-list li .icon:hover{
+    fill: var(--text-decor1)!important;
+}
+.photo-bg .music-box .music-list li .music{
+    display: contents;
+}
+.photo-bg .music-box .music-list li .music p{
+    display: inline-flex;
+    margin-right: auto;
+    height: fit-content;
+}
+
+.photo-bg .music-box .music-list li button{
+    background: transparent;
+    cursor: pointer;
+    border: none;
+    height: fit-content;
 }
 .photo-bg .music-box ul > *{
     margin-bottom: 5px;
 }
-
-
-
 .aboutme{
     padding: 5% 2.5% 5% 2.5%;
     border: 1px solid #00ADB5;
@@ -579,17 +591,18 @@ div{
 .aboutme > p{
     color: rgb(236, 216, 216);
 }
-
 .aboutme > *{
     margin-bottom: 30px;
 }
 .aboutme > :last-child{
     margin-bottom: 0;
 }
-
 .interests > *{
     transform: scale(1);
     box-shadow: 0 0 #0000, 0 0 #0000, 0 1px 2px 0 rgba(0,0,0,.05);
+}
+.interests > *:hover{
+    background-color: #000;
 }
 
 /* ------------ Experiences / Education / Skills Section ------------ */
@@ -690,11 +703,9 @@ div{
 
 /* ------------ Latest works Section ------------ */
 
-
 #works{
     width: 100%;
-    background: #201f23;
-    margin: 0 2% 0 2%;
+    padding: 0 2% 0 2%;
 }
 
 #works .works-list{
@@ -711,10 +722,11 @@ div{
     padding: 2.5%;
     border: 1px solid var(--text-secondary);
     border-radius: 20px;
+    background-color: #201f23;
 }
 #works .works-list .work h3{
     margin-top: 10px;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
     color: var(--text-secondary);
     font-weight: 500;
 }
@@ -724,6 +736,8 @@ div{
 #works .works-list .work .work-img img{
     width: 75%;
     height: auto;
+    border: none;
+    border-radius: 20px;
 }
 /* ------------ Footer ------------ */
 .footer{
