--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,14 +26,24 @@
     --bg-pres-cover: url(../../images/bg-pres.png);
     --logo-cover: url(../../images/logo.png);
 }
+* , *:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 * > *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
+body::-webkit-scrollbar{
+    display: none;
+}
 body {
     background-color: #000;
     color: white;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 a{
     text-decoration: none;
@@ -55,6 +65,11 @@ p{
 div{
     position: relative;
 }
+img, video {
+    width: 100%;
+    height: auto;
+}
+
 
 /* ------------ Global Clases ------------ */
 
@@ -242,6 +257,15 @@ div{
 .bg-decor1{
     background: var(--text-decor1)!important;
 }
+.bg-dark{
+    background-color: #000;
+}
+.bg-lightdark{
+    background: #202125;
+}
+.bg-lighterdark{
+    background-color: #373A43;
+}
 .border-decor1{
     border-color: var(--text-decor1);
 }
@@ -333,6 +357,108 @@ div{
 }
 /* ------------ Media Query ------------ */
 
+@media only screen and (max-device-width: 700px) {
+    .header{
+        padding: 20px 30px!important;
+    }
+    #nav{
+        display: none;
+    }
+    .socials-header{
+        display: none;
+    }
+    .banner-section{
+        align-self: center!important;
+        justify-content: center!important;
+        height: 100vh!important;
+    }
+    .pres{
+        flex-direction: column;
+        gap: 100px;
+        padding: 10px!important;
+    }
+    .sign{
+
+    }
+    .pres .slider-container{
+        width: 100vw;
+        height: fit-content;
+        
+    }
+    .pres .slider-container .slider{
+        transform: rotate(0deg);
+        height: fit-content;
+    }
+    .banner-title{
+        padding-right: 0!important;
+    }
+    .about{
+        flex-direction: column;
+    }
+    .aboutme{
+        width: 100%;
+    }
+    
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+    #nav{
+        display: none;
+    }
+    .socials-header{
+        display: none;
+    }
+}
+/*
+@media (min-width: 640px) { body {font-size:1rem;} }
+@media (min-width:960px) { body {font-size:1.2rem;} }
+@media (min-width:1100px) { body {font-size:1.5rem;} }
+*/
+
+/* ------------ aesthethics ------------ */
+.bg-lines{
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+.top-line{
+    width: 100%;
+    height: 20rem;
+    display: block;
+    position: absolute;
+}
+.linehr1{
+    top: 55rem;
+    left: 0;
+    -webkit-transform-origin: right top;
+    transform-origin: right top;
+    -webkit-transform: skewY(-45deg);
+    transform: skewY(-45deg);
+    background-color: var(--text-decor1);
+}
+.linehr2{
+    top: 135rem;
+    left: 0;
+    -webkit-transform-origin: left top;
+    transform-origin: left top;
+    -webkit-transform: skewY(45deg);
+    transform: skewY(45deg);
+    z-index: -1;
+    background-color: #e34061;
+}
+.linehr3{
+    top: 215rem;
+    left: 0;
+    -webkit-transform-origin: right top;
+    transform-origin: right top;
+    -webkit-transform: skewY(-45deg);
+    transform: skewY(-45deg);
+    z-index: -1;
+    background-color: #e34061;
+}
 /* ------------ Header & Navigation ------------ */
 
 .header{
@@ -519,7 +645,7 @@ div{
 }
 .photo-bg{
     border: .25px solid #00ADB5;
-    background-color: rgba(0, 0, 0, .125);
+    background-color: rgba(0, 0, 0, 1);
     border-radius: 0.5rem;
     padding: 2.5% 2.5% 2.5% 2.5%;
     height: fit-content;
@@ -623,8 +749,9 @@ div{
     align-items: center;
     width: 80%;
 }
-.exp-cont section ul{
+.exp-cont section > ul{
     width: 100%;
+    background-color: #000;
 }
 .exp-cont section .box-list > *{
     margin-bottom: 40px;
@@ -652,9 +779,11 @@ div{
 }
 .exp-cont section .skills{
     border: 1px solid var(--text-secondary);
+    background-color: #000;
     width: 100%;
     height: 100%;
     padding: 40px 40px;
+    border-radius: 5px;
 }
 .exp-cont section .skills .skills-list{
     padding: 0 2.5% 0 2.5%;
@@ -739,6 +868,82 @@ div{
     border: none;
     border-radius: 20px;
 }
+
+/* ------------ Contact Section ------------ */
+
+#contact{
+    height: 100vh;
+    gap: 40px;
+    padding-left: 5%;
+    background-color: #202125;
+}
+#contact .form-container{
+    padding: 20px;
+    width: 50%;
+    border-radius: 20px;
+    background: #201f23;
+}
+#contact .form-container p{
+    margin-bottom: 10%;
+}
+#contact #contact-form{
+    font-family: var(--font-roboto);
+    font-size: 1em;
+    padding: 10px;
+}
+#contact #contact-form label{
+    text-align: left;
+    font-weight: 300;
+}
+#contact #contact-form > input, textarea{
+    border-radius: 5px;
+    padding: 5%;
+    margin-bottom: 10px;
+    font-weight: 300;
+    border: 1px solid #f15a29;
+}
+#contact #contact-form > input:focus-visible, textarea:focus-visible{
+    outline: 0;
+}
+#contact #contact-form button{
+    cursor: pointer;
+    background-color: var(--text-important);
+    border-radius: 10px;
+    padding: 1rem;
+    width: 100%;
+    color: #FFF;
+}
+#contact #contact-form button:hover{
+    background-color: #f26e42;
+}
+
+
+#contact .info-box{
+    background-color: rgba(0, 0, 0, .8);
+    padding: 2rem;
+    top: 50px;
+    left: 10px;
+    width: fit-content;
+    border-radius: 10px;
+    position: absolute;
+}
+#contact .info-box span{
+    color: var(--text-secondary);
+    font-weight: bold!important;
+}
+
+#contact .map{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+#contact .map iframe{
+    height:100%;
+    width:100%;
+}
+
+
+
 /* ------------ Footer ------------ */
 .footer{
     position: relative;
