--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -373,12 +373,18 @@ img, video {
     .header{
         width: 100vw;
         padding: 20px 30px!important;
-    }
-    #nav{
-        display: none;
+        flex-direction: column!important;
+        gap: 30px!important;
+        font-size: .6em!important;
+        text-align: center!important;
+        justify-content: center!important;
+        padding: 5%!important;
     }
     .socials-header{
         display: none;
+    }
+    .menu {
+        display: block!important;
     }
     .banner-section{
         align-self: center!important;
@@ -509,6 +515,7 @@ img, video {
     max-width: 80px;
     vertical-align: middle;
 }
+
 /* ------------ Banner Section ------------*/
 
 #main .banner-section{
